upptimerc: add robotsText

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,10 +30,8 @@ sites:
     url: https://simple-site.ching367436.me
     
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: upptime.ching367436.me
-  # baseUrl: /your-repo-name
+  robotsText: "User-agent: * \n Disallow: /"
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
