--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,6 +28,12 @@ sites:
     url: https://flag-checker-anti-debugging.ching367436.me/
   - name: 'CTF: Simple Site'
     url: https://simple-site.ching367436.me
+  - name: 'CTF: Hello World'
+    url: https://hello-world-gcc.ching367436.me/?data%5Bname%5D=Ching367436&data%5Bcountry%5D=Taiwan
+  - name: 'CTF: Hello World 2'
+    url: https://hello-world-ais3.ching367436.me/?name=Ching367436&country=Taiwan
+  - name: 'CTF: Hello World 3'
+    url: https://hello-world-3-ais3.ching367436.me/?name=Ching367436&country=Taiwan
     
 status-website:
   cname: upptime.ching367436.me
