--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,4 +1,3 @@
-# Change these first
 owner: Ching367436 # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 user-agent: ChingBot/1.0 (https://github.com/Ching367436/upptime)
@@ -48,6 +47,15 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+
+workflowSchedule:
+  graphs: "0 0 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/6 * * * *"
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
