upptimerc: add BambooFox Main Site (Direct IP)

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,9 @@ sites:
     url: https://blog.ching367436.me
   - name: BambooFox Main Site
     url: https://bamboofox.cs.nycu.edu.tw
+  - name: BambooFox Main Site (Direct IP)
+    url: https://172.104.78.53
+    __dangerous__disable_verify_host: true
   # My CTF Challenges
   - name: 'CTF: Frontend Unraveling Web Application: Master Obfuscated Code Odyssey'
     url: https://fuwamoco-flag-checker.ching367436.me
