--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ sites:
     method: POST
     url: https://starburst-cat-shop.ching367436.me/login
     headers:
-      Content-Type: application/x-www-form-urlencoded
+      - 'Content-Type: application/x-www-form-urlencoded'
     body: "username=ChingBot"
   - name: 'CTF: Login Panel'
     url: https://login-panel.ching367436.me
