upptimerc: starburst-cat-shop: revert login test

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,10 +15,11 @@ sites:
     url: https://fuwamoco-flag-checker.ching367436.me
   - name: 'CTF: Starburst Cat Shop'
     url: https://starburst-cat-shop.ching367436.me/login
-    method: POST
-    body: "username=ChingBot"
-    expectedStatusCodes:
-      - 302
+    # Cannot test login since it would first POST to `/login`, which is correct, but then POST `/`, which returns 404.
+    # method: POST
+    # body: "username=ChingBot"
+    # expectedStatusCodes:
+    #   - 302
   - name: 'CTF: Login Panel'
     url: https://login-panel.ching367436.me
   - name: 'CTF: Login Panel 2'
